    calls where the reported exception term context argument would be unbound.

    Corrected a bug in the compilation of multifile directives and multifile
    predicate clauses within objects and categories for the pseudo-object
    "user". Corrected a bug in the compilation of multifile predicate clauses
    for other objects and categories.

    Corrected a secure meta-predicate compilation bug when using static
    binding to optimize a call to a local meta-predicate made by a normal,
    public predicate.

    Added a monitor/1 predicate to the library event registry objects.
    Updated the definition of the monitors/1 and monitored/1 predicates
    in order to avoid using the non-standard predicate sort/2.

    Added support for adding the Logtalk mime-type to systems supporting
    the freedesktop.org shared mime-info database.

    Added support for adding the Logtalk mime-type and the file description
    for Logtalk source files to the Windows installer.

    Updated the RPM spec file and build script to no longer require root
    access. The RPM package built from these files is no longer relocatable.

    Updated the POSIX (un)install shell scripts to print the version number
    of the Logtalk release being (un)installed.

    Updated the "lgt2pdf.sh" and "lgt2txt.sh" POSIX shell scripts in order
    to prevent accidental deletion of the "logtal.dtd" and "logtalk.xsd"
    files in the Logtalk installation directory. Thanks to Michael Igler
    for the bug report.

    Added information about using the Sublime Text Windows text editor for
    editing Logtalk source files.

    Updated documentation in order to remove references to deprecated syntax
    for sequences of predicate indicators in predicate directives. Updated 
    documentation on built-in meta-predicates to correctly described their
    semantics when used within categories.

    Added a simple example, "multifile", illustrating how to use multifile